--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "keywords": [],
   "description": "",
